tests/run-make/crate-loading/multiple-dep-versions.stderr
error[E0277]: the trait bound `dep_2_reexport::Type: Trait` is not satisfied
  --> replaced
   |
LL |     do_something(Type);
   |     ------------ ^^^^ the trait `Trait` is not implemented for `dep_2_reexport::Type`
   |     |
   |     required by a bound introduced by this call
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
help: the trait `Trait` is implemented for `dependency::Type`
  --> replaced
   |
LL | impl Trait for Type {
   | ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `do_something`
  --> replaced
   |
LL | pub fn do_something<X: Trait>(_: X) {}
   |                        ^^^^^ required by this bound in `do_something`

error[E0599]: no method named `foo` found for struct `dep_2_reexport::Type` in the current scope
  --> replaced
   |
LL |     Type.foo();
   |          ^^^ method not found in `dep_2_reexport::Type`
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the trait that was imported
   = help: you can use `cargo tree` to explore your dependency tree

error[E0599]: no function or associated item named `bar` found for struct `dep_2_reexport::Type` in the current scope
  --> replaced
   |
LL |     Type::bar();
   |           ^^^ function or associated item not found in `dep_2_reexport::Type`
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the trait that was imported
   = help: you can use `cargo tree` to explore your dependency tree

error[E0277]: the trait bound `OtherType: Trait` is not satisfied
  --> replaced
   |
LL |     do_something(OtherType);
   |     ------------ ^^^^^^^^^ the trait `Trait` is not implemented for `OtherType`
   |     |
   |     required by a bound introduced by this call
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
help: the trait `Trait` is implemented for `dependency::Type`
  --> replaced
   |
LL | impl Trait for Type {
   | ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `do_something`
  --> replaced
   |
LL | pub fn do_something<X: Trait>(_: X) {}
   |                        ^^^^^ required by this bound in `do_something`

error[E0308]: mismatched types
  --> replaced
   |
LL |     do_something_type(Type);
   |     ----------------- ^^^^ expected `dependency::Type`, found `dep_2_reexport::Type`
   |     |
   |     arguments to this function are incorrect
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub struct Type(pub i32);
   | ^^^^^^^^^^^^^^^ this is the expected type
   |
  ::: replaced
   |
LL | pub struct Type;
   | --------------- this is the found type
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> replaced
   |
LL | pub fn do_something_type(_: Type) {}
   |        ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> replaced
   |
LL |     do_something_trait(Box::new(Type) as Box<dyn Trait2>);
   |     ------------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `dependency::Trait2`, found trait `dep_2_reexport::Trait2`
   |     |
   |     arguments to this function are incorrect
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait2 {}
   | ^^^^^^^^^^^^^^^^ this is the expected trait
   |
  ::: replaced
   |
LL | pub trait Trait2 {}
   | ---------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> replaced
   |
LL | pub fn do_something_trait(_: Box<dyn Trait2>) {}
   |        ^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.